<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddReminder"
    android:orientation="vertical"
    tools:showIn="@layout/activity_add_reminder"
    android:weightSum="9">

    <EditText
        android:id="@+id/addReminderName"
        android:hint="@string/addReminderNameFieldHint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:maxLines="2"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/addReminderImageSelect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/addReminderImageTitle"
        android:layout_marginTop="15dp"
        android:onClick="addReminderSelectImageBtnClickListener"/>

    <ImageView
        android:id="@+id/addReminderImage"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY" />

    <EditText
        android:id="@+id/addReminderDescription"
        android:hint="@string/addReminderDescriptionHint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:maxLines="4"
        android:inputType="textMultiLine"
        android:ems="10" />

    <Button
        android:id="@+id/addReminderMarker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/addReminderMarker"
        android:onClick="addReminderAddMarkerOnClickListener"/>

    <Button
        android:id="@+id/addReminderSchedule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/addReminderSchedule"
        android:onClick="addReminderScheduleClickListener"/>

    <Button
        android:id="@+id/addReminderSave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Save"
        android:onClick="addReminderBtnSaveClickListener" />

    <Button
        android:id="@+id/addReminderBtnBack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/detailBtnBack"
        android:onClick="addReminderBtnBackClickListener" />

</LinearLayout>
